<resources>
    <string name="app_name">WSA_ROS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_info">About</string>
    <string name="action_show_data">Show data</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_author_label">Author</string>
    <string name="about_author_name">Vincenzo Norman Vitale</string>
    <string name="about_email_label">Email</string>
    <string name="about_email_value">vincenzon.vitale@studenti.unina.it</string>
    <string name="action_start">Start</string>
    <string name="menu_separator_send">Persistence</string>
    <string name="action_home">Home</string>
    <string name="text_view_status_label">Status</string>
    <string name="text_view_device_label">Device</string>
    <string name="sensing_status_disabled_value_tv">Disabled</string>
    <string name="sensing_status_enabled_value_tv">Enabled</string>
    <string name="sensing_device_default_name_tv">None</string>
    <string name="toggle_service_button_on">Deactivate</string>
    <string name="toggle_service_button_off">Activate</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_display_data">DisplayDataActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_sensing_frequency">Sensing frequency</string>
    <string name="settings_sensing_frequency_hint">millis</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="generic_settings">Generic Settings</string>
    <string name="title_activity_sensors">SensorsActivity</string>
    <string name="action_sensors">Sensors</string>
    <string name="settings_require_raw_sensors">Request raw data</string>
    <string name="settings_require_raw_sensors_hint">Use raw sensors instead of standard sensors</string>
    <string name="generic_sensor_field_name">Sensor</string>
    <string name="sensor_status_tv_active">Active</string>
    <string name="sensor_status_tv_not_active">Not active</string>
    <string name="sensor_file_already_exist">The sensor file has been already saved for this device</string>
    <string name="sensor_file_saved">Sensor file saved</string>
    <string name="data_file_exists_appending">Appending to existing data file</string>
    <string name="save_sensors_specs_button">Save sensors specs</string>
    <string name="common_button_text_send">Send</string>
    <string name="session_tag_choose_hint">Tag for this session</string>
    <string name="session_tag_current_tag_label">Current Tag :</string>
    <string name="session_tag_empty_error">The Tag can\'t be empty!</string>
    <string name="common_button_text_dismiss">Dismiss</string>
    <string name="settings_general_group_title">General</string>
    <string name="settings_ros_group_title">ROS</string>
    <string name="settings_ros_hostname_key">Hostname</string>
    <string name="settings_ros_hostname_title">ROS Host Address</string>
    <string name="settings_ros_port_key">Port</string>
    <string name="settings_ros_port_title">ROS Port</string>
    <string name="ros_not_sending_message">NOT sending to ROS</string>
    <string name="ros_sending_message">sending to ROS</string>
    <string name="ros_send_toggle_button_on">Start ROS</string>
    <string name="ros_send_toggle_button_off">Stop ROS</string>
    <string name="ros_invalid_url_error_message">ROS invalid url</string>
    <string name="ros_empty_host_error_message">ROS Host cannot be empty</string>
    <string name="settings_ros_path_key">Path</string>
    <string name="settings_ros_path_title">ROS path on Host</string>
</resources>
