<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.norman.wearsensorsapp.AboutActivity"
    tools:showIn="@layout/app_bar_about">

    <TextView
        android:id="@+id/aboutAuthorLabel"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/about_author_label"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutAuthorName"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/about_author_name"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/aboutAuthorLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutEmailLabel"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/about_email_label"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAuthorLabel" />


    <TextView
        android:id="@+id/aboutEmailValue"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:text="@string/about_email_value"
        android:textSize="24sp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/aboutAuthorName"
        app:layout_constraintLeft_toRightOf="@+id/aboutEmailLabel"
        android:layout_marginLeft="24dp" />

</android.support.constraint.ConstraintLayout>
